fix spacing issues

--- a/css/about.css
+++ b/css/about.css
@@ -88,7 +88,7 @@ body {
   text-align: center;
   background-color: var(--accent-color);
 
-  color: white;
+  color: #222222;
   font-size: 1.25rem;
   font-weight: 700;
 
@@ -120,7 +120,7 @@ body {
   width: 2rem;
   aspect-ratio: 1;
   background: var(--bgColor);
-  border: 0.3rem solid var(--accent-color);
+  border: 0.3rem solid #222222;
   border-radius: 50%;
   top: 50%;
 
