--- a/css/style.css
+++ b/css/style.css
@@ -171,14 +171,13 @@ body {
   width: 100%;
   height: 2px;
   background-color: var(--card-background);
-  margin: 5.5rem 0;
+  margin: 1rem 0;
 }
 
 /* Projects */
 #projects {
   display: flex;
   flex-direction: column;
-  margin: 2rem auto 5rem;
 }
 
 #projects .btn {
